<resources>
    <string name="app_name">YAHTZEE!</string>
    <string name="RulesLong">
        Yahtzee! is a game based on rolling five dices.
        Players aim to obtain the highest score possible making as much combination as possible, but each one can be made once only.
        These are:
        \n\n
        • Pair(5 points)\n\n
        • Tris(10 points)\n\n
        • Bonus: Achieved whenever during a game your score is greater than 100(35 points)\n\n
        • 4 or 5 straight: Achieved whenever your dice are sortable in ascending order in a group of four or five consecutive numbers(30 and 40 points respectively)\n\n
        • Four dices with same value(20 points)\n\n
        • Full: come nel poker, un tris e una coppia(25 punti)\n\n
        • Yahtzee!: All dices with same value(50 points)\n\n
        • Chance: Achieved the first time you get a combination you just got on a previous roll(25 points)\n
        \nEvery turn, players roll dices. It is possible to click on a single dice if you want to change its value,but once only, to try to achieve a certain combination.
        If there are no available combination at the end of this phase, no points are given.
        Wins whoever has the highest total score after 13 rolls.\n\nGOOD LUCK!
    </string>
    <string name="close">close</string>
    <string name="Regolamento">Rules</string>
    <string name="Play">play</string>
    <string name="settings">settings</string>
    <string name="exitButton">exit game</string>
    <string name="leaving">"Are you sure you want to exit?  All progress will be lost forever     "</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="helloplayfragment">helloplayfragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Roll">Roll!</string>
    <string name="seeResults">results</string>
    <string name="coppia">Pair:</string>
    <string name="tris">Tris:</string>
    <string name="quater">Quater:</string>
    <string name="yahtzee">Yahtzee!:</string>
    <string name="scala_da_4">4-Straight:</string>
    <string name="scala_da_5">5-Straight:</string>
    <string name="full">Full:</string>
    <string name="bonus">Bonus:</string>
    <string name="chance">Chance:</string>
    <string name="next_roll">next Roll!</string>
    <string name="Cancel">cancel</string>
    <string name="Ok">ok</string>
    <string name="select">select</string>
    <string name="insert_your_username">insert your username</string>
    <string name="credits">"Developed by:
        \n\nFederico Cappellini and Giordano Spirito     "</string>
    <string name="credit" translatable="false">CREDITS</string>
    <string name="ok">ok</string>
    <array name="SelectMatch">
        <item>Singleplayer(training)</item>
        <item>2 players(CPU)</item>
        <item>3 players(CPU)</item>
        <item>4 players(CPU)</item>
    </array>
    <string name="how_to_play">how to play</string>
    <string name="accept">accept</string>
    <string name="score">score:</string>
    <string name="punteggio">score</string>
    <string name="rolls_remaining">rolls left:</string>
    <string name="noCombo">no combo</string>
    <string name="back">back</string>
    <string name="End_game">end</string>
    <string name="Points">points!</string>
    <string name="warning">WARNING!</string>
    <string name="Select_gamemode">Select a game-mode first</string>
    <string name="selezionare_il_numero_dei_giocatori">Select the number of players</string>
    <string name="singleplayer_training">SinglePlayer (training)</string>
    <string name="_2_players">2 Players</string>
    <string name="_3_players">3 Players</string>
    <string name="_4_players">4 Players</string>
    <string name="apply">Apply</string>
    <string name="tabella_punteggi">Scoreboard</string>
    <string name="back_to_menu">back to menu</string>
    <string name="Player_2">Player 2</string>
    <string name="Player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="endgame">Back to main menu?</string>
    <string name="verticalRoll">r \n o&#10;l&#10;l&#10;</string>

</resources>